--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   country_picker: ^2.0.17
-  multi_select_flutter: ^4.1.2
   flutter_otp_text_field: ^1.1.1
+  multiselect: ^0.0.7
+  
 
 dev_dependencies:
   flutter_test:
@@ -79,17 +80,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: JosefinSans
+      fonts:
+        - asset: assets/fonts/josefin-sans/JosefinSans-Bold.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-BoldItalic.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-Italic.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-Light.ttf 
+        - asset: assets/fonts/josefin-sans/JosefinSans-LightItalic.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-Regular.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-SemiBold.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-SemiBoldItalic.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-Thin.ttf
+        - asset: assets/fonts/josefin-sans/JosefinSans-ThinItalic.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
