--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.diasporacare">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="diasporacare"
+        android:label="DiaspoCare"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
