--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,16 +27,23 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   google_fonts: ^3.0.1
+  
   # shared_preferences: ^0.5.5
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
   build_runner: ^2.2.0
+  flutter_launcher_icons: ^0.11.0
   bloc_test: ^9.0.3
   flutter_lints: ^2.0.0
+
+  
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon.png"
 
 flutter:
   assets:
