--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = diasporacare
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.diaspocare.diaspocareVendor;
+PRODUCT_BUNDLE_IDENTIFIER = com.diaspocare.vendor;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
