--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 publish_to: 'none' 
 
 
-version: 1.7.0+7
+version: 1.8.0+8
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
@@ -34,6 +34,8 @@ dependencies:
   firebase_messaging: ^14.5.0
   firebase_core: ^2.11.0
   flutter_local_notifications: ^14.0.0+2
+  double_back_to_close_app: ^2.1.0
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
