--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_local_notifications: ^14.0.0+2
   double_back_to_close_app: ^2.1.0
   device_preview: ^1.1.0
+  local_auth: ^2.1.6
  
 
 dev_dependencies:
